feat: Integrate Jetpack DataStore for token management
This commit introduces Jetpack DataStore (Preferences) to securely store and manage the user's access token, replacing the previous hardcoded token implementation.

Key changes:
- Added the `androidx.datastore:datastore-preferences` dependency.
- Implemented `AppPreference.kt` as a wrapper around DataStore for saving and retrieving values.
- Created `PreferencesModule.kt` to provide an `AppPreference` singleton instance via Hilt.
- In `AuthRepositoryImpl`, the access token is now saved to DataStore upon successful login.
- `SyncWorker` now retrieves the access token from DataStore to authenticate network requests, removing the hardcoded token.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,7 +17,7 @@ pagingVersion = "3.3.6"
 ktorVersion = "3.3.1"
 androidxWork="2.10.2"
 hiltExt = "1.2.0"
-
+preference = "1.1.7"
 
 
 
@@ -53,6 +53,8 @@ ktor-client-logging = { group = "io.ktor",name ="ktor-client-logging", version.r
 androidx-work-ktx = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "androidxWork" }
 hilt-work = { group = "androidx.hilt", name = "hilt-work", version.ref = "hiltExt" }
 hilt-ext-compiler = { group = "androidx.hilt", name = "hilt-compiler", version.ref = "hiltExt" }
+datastore-preferences = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "preference" }
+
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
